--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>         
         <div class="background_video">
             <video autoplay muted loop id="myVideo">
-                <source src="./home/video/video1.mp4" type="video/mp4">
+                <source src="https://vod-progressive.akamaized.net/exp=1668899966~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F2341%2F25%2F636709191%2F2917472291.mp4~hmac=8973cc317ee29eca0649164c1a20461dfa5a98357b3c9ff69c4691990060163d/vimeo-prod-skyfire-std-us/01/2341/25/636709191/2917472291.mp4" type="video/mp4">
             </video>
             <div style="text-align:center" class="content">
                 <h2>The humanly intelligent yacht <br> marketplace & expert platform.</h2>
